--- a/pom.xml
+++ b/pom.xml
@@ -5,19 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>gb-java-ee</artifactId>
+    <artifactId>geek-java-ee-09-10</artifactId>
     <version>1.0-SNAPSHOT</version>
-
     <packaging>pom</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
-
-    <modules>
-        <module>first-web-app</module>
-        <module>first-jsf-app</module>
-    </modules>
 
 </project>
